--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,13 @@ img{
     max-width: 100%;
 }
 
+/* Utility Classes */
+
+.container{
+    max-width: 1100px;
+    margin: 0 auto;
+}
+
 /* Navbar */
 
 .navbar{
@@ -48,8 +55,6 @@ img{
 }
 
 .navbar__container{
-    max-width: 1100px;
-    margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -67,14 +72,63 @@ img{
     font-weight: 600;
 }
 
-.navbar__menu-link:hover{
+.navbar__menu-link:hover,
+.navbar__mobile-menu-link:hover{
     color: var(--primary-color);
 }
 
-.navbar__menu-link--primary{
+.navbar__menu-link--primary,
+.navbar__mobile-menu-link--primary{
     color: var(--primary-color);
 }
 
-.navbar__menu-link--primary:hover{
+.navbar__menu-link--primary:hover,
+.navbar__mobile-menu-link--primary:hover{
     color: #fff;
+}
+
+/* Mobile Menu */
+
+.navbar__mobile-menu{
+    display: none;
+    cursor: pointer;
+}
+
+.navbar__mobile-menu-items{
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background: var(--secondary-color);
+    opacity: 0.95;
+    padding: 3rem 2rem;
+    text-align: center;
+    box-shadow: 0 2px 5px rgba(255, 255, 255, 0.1);
+    border-top: 1px solid rgba(255, 255, 255, 0.1);
+    transition: transform 0.3s ease-in-out;
+}
+
+.navbar__mobile-menu-list{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    font-size: 1.2rem;
+}
+
+.navbar__mobile-menu-items{
+    transform: translateX(100%);
+}
+
+.navbar__mobile-menu-items.active{
+    transform: translateX(0);
+}
+
+@media(max-width: 768px){
+    .navbar__menu{
+        display: none;
+    }
+
+    .navbar__mobile-menu{
+        display: block;
+    }
 }
