--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,22 @@ img{
     margin: 0 auto;
 }
 
+.btn{
+    padding: 0.5rem 2rem;
+    background-color: var(--primary-color);
+    border: 2px solid transparent;
+    color: #fff;
+    font-weight: 600;
+    border-radius: 50px;
+    transition: background-color 0.3s ease;
+}
+
+.btn:hover{
+    background-color: var(--secondary-color);
+    border-color: var(--primary-color);
+
+}
+
 /* Navbar */
 
 .navbar{
@@ -121,6 +137,89 @@ img{
 
 .navbar__mobile-menu-items.active{
     transform: translateX(0);
+}
+
+/* Hero */
+
+.hero{
+    background: #000 url(../images/header-background.jpg) center center/cover no-repeat;
+    padding: 11.5rem 2rem 8rem;
+}
+
+.hero__container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    grid-area: 2rem;
+}
+
+.hero__content{
+    max-width: 500px;
+}
+
+.hero__title{
+    font-size: 3.5rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    line-height: 1.2;
+}
+
+.hero__title--primary{
+    color: var(--primary-color);
+}
+
+.hero__description{
+    margin-top: 1.5rem;
+    font-size: 1.2rem;
+    line-height: 1.6;
+}
+
+.hero_image img{
+    max-width: 500px;
+}
+
+.hero__buttons{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5rem;
+    margin-top: 2rem;
+}
+
+.hero__button{
+    padding: 1rem 2rem;
+}
+
+.hero__button i{
+    margin-right: 0.5rem;
+}
+
+@media(max-width: 992px){
+    .hero{
+        padding: 10rem;
+        text-align: center;
+    }
+
+    .hero__container{
+        flex-direction: column;
+    }
+
+    .hero__title{
+        font-size: 2.3rem;
+    }
+
+    .hero__buttons{
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .hero__button{
+        width: 100%;
+    }
+
+    .hero__image img{
+        max-width: 350px;
+    }
 }
 
 @media(max-width: 768px){
