--- a/css/styles.css
+++ b/css/styles.css
@@ -199,6 +199,39 @@ img{
     margin-right: 0.5rem;
 }
 
+/* Testimonials */
+
+.testimonials{
+    padding: 4rem 2rem;
+    text-align: center;
+}
+
+.testimonials__container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+    align-items: center;
+    justify-content: center;
+}
+
+.testimonials__card{
+    padding: 0 3rem;
+}
+
+.testimonials__image img{
+    width: 96px;
+    height: 96px;
+    border-radius: 50%;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 1.5rem;
+}
+
+.testimonials__card-text{
+    font-style: italic;
+    margin-bottom: 1.5rem;
+}
+
 @media(max-width: 992px){
     .hero{
         padding: 10rem;
@@ -225,6 +258,18 @@ img{
     .hero__image img{
         max-width: 350px;
     }
+
+    .testimonials__container{
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .testimonials__card{
+        padding: 0 1.5rem;
+    }
+
+    .testimonials__card:nth-child(3){
+        display: none;
+    }
 }
 
 @media(max-width: 768px){
@@ -234,5 +279,13 @@ img{
 
     .navbar__mobile-menu{
         display: block;
+    }
+
+    .testimonials__container{
+        grid-template-columns: 1fr;
+    }
+
+    .testimonials__card:nth-child(2){
+        display: none;
     }
 }
