Added features section

--- a/css/styles.css
+++ b/css/styles.css
@@ -272,6 +272,69 @@ img{
     }
 }
 
+/* Features */
+
+.features{
+    background-color: var(--tertiary-color);
+    padding: 6rem 2rem;
+}
+
+.features__container{
+    text-align: center;
+}
+
+.features__title{
+    font-size: 2.3rem;
+    margin-bottom: 2rem;
+    text-transform: uppercase;
+}
+
+.features__description{
+    max-width: 600px;
+    margin: 1rem auto 4rem;
+}
+
+.features__grid{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+}
+
+.features__grid-column{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 6rem;
+}
+
+.features__grid-item{
+    display: flex;
+    align-items: start;
+    justify-content: start;
+    text-align: right;
+    gap: 1.5rem;
+}
+
+.features__grid-item-text-title{
+    font-size: 1.3rem;
+    font-weight: 600;
+    margin-bottom: center;
+}
+
+.fetures__grid-item-icon{
+    margin-top: 2rem;
+}
+
+.features__grid-item-icon i{
+    color: var(--primary-color);
+}
+
+.features__grid-column-right .features__grid-item{
+    flex-direction: row-reverse;
+    text-align: left;
+}
+
 @media(max-width: 768px){
     .navbar__menu{
         display: none;
