--- a/css/styles.css
+++ b/css/styles.css
@@ -320,8 +320,86 @@ img{
 }
 
 .preview__video-wrapper img{
+    width: 100%;
     max-width: 900px;
     border-radius: 10px;
+}
+
+/* Play Button */
+
+.preview__video-play-button{
+    position: absolute;
+    top: 48%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    z-index: 10;
+    display: block;
+    box-sizing: content-box;
+    width: 2rem;
+    height: 2.75rem;
+    border-radius: 50%;
+    cursor: pointer;
+    padding: 1.25rem 1.25rem 1.25rem 1.75rem;
+}
+
+/* Play Button Circle */
+
+.preview__video-play-button::after{
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    z-index: 1;
+    background: #00c9db;
+    height: 4.375rem;
+    width: 4.375rem;
+    border-radius: 50%;
+    display: block;
+    transition: all 200ms;
+}
+
+/* Play Button Triangle */
+
+.preview__video-play-button span{
+    position: relative;
+    display: block;
+    z-index: 3;
+    top: 0.375rem;
+    left: 0.275rem;
+    width: 0;
+    height: 0;
+    border-left: 1.625rem solid #fff;
+    border-top: 1rem solid transparent;
+    border-bottom: 1rem solid transparent;
+}
+
+/* Play Button Animation */
+
+.preview__video-play-button::before{
+    content: "";
+    position: absolute; 
+    top: 50%;
+    left: 50%;
+    z-index: 0;
+    display: block;
+    width: 4.75rem;
+    height: 4.75rem;
+    background: #00c9db;
+    border-radius: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    animation: pulse-border 1500ms ease-out infinite;
+}
+
+@keyframes pulse-border{
+    0%{
+        transform: translateX(-50%) translateY(-50%) scale(1);
+        opacity: 1;
+    }
+    100%{
+        transform: translateX(-50%) translateY(-50%) scale(1.25);
+        opacity: 0;
+    }
 }
 
 @media(max-width: 992px){
